Fill in Gumroad repo URLs

--- a/packages/marketing/content/docs/development/nginx-setup.mdx
+++ b/packages/marketing/content/docs/development/nginx-setup.mdx
@@ -11,5 +11,5 @@ If a container with that label is running, Helper won't start its own nginx and 
 
 See [Gumroad](https://github.com/antiwork/gumroad) for an example:
 
-- [nginx configuration]()
-- [Labelled container in the Docker Compose file]()
+- [nginx configuration](https://github.com/antiwork/gumroad/blob/main/docker/local-nginx/helperai_dev.conf)
+- [Labelled container in the Docker Compose file](https://github.com/antiwork/gumroad/blob/main/docker/docker-compose-local.yml)
